# juno-txbuild

./: CHANGELOG.md  Makefile  README.md  go.mod  go.sum
.github/workflows/: release.yml
api/: txoutputs.schema.json
cmd/juno-txbuild/: main.go
docker/junocashd/: Dockerfile
internal/app/: app.go  app_e2e_test.go  app_integration_test.go  scan_stub_test.go  txbuild_helpers_test.go
internal/chain/: scan.go
internal/cli/: cli.go  cli_test.go
internal/ffi/: witness.go
internal/logic/: logic.go  logic_test.go
internal/testutil/containers/: junocashd.go
internal/witness/: witness.go
pkg/txbuild/: scan_notes_test.go  txbuild.go
rust/txbuild/: Cargo.toml
rust/txbuild/include/: juno_txbuild.h
rust/txbuild/src/: lib.rs
